<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="40dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/insertForm"
            android:visibility="gone">
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="72dp"
                    android:text="@string/insert_fields"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/fullname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="116dp"
                    android:ems="10"
                    android:hint="@string/fullname"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="@+id/textView2"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/amka"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="192dp"
                    android:ems="10"
                    android:hint="AMKA"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="@+id/textView2"
                    app:layout_constraintHorizontal_bias="0.51"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="272dp"
                    android:ems="10"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    app:layout_constraintEnd_toEndOf="@+id/textView2"
                    app:layout_constraintHorizontal_bias="0.489"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="352dp"
                    android:ems="10"
                    android:hint="@string/phone"
                    android:inputType="number"
                    app:layout_constraintEnd_toEndOf="@+id/textView2"
                    app:layout_constraintHorizontal_bias="0.489"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/appoint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="360dp"
                    android:text="@string/insert_button"
                    app:layout_constraintEnd_toEndOf="@+id/textView2"
                    app:layout_constraintHorizontal_bias="0.484"
                    app:layout_constraintStart_toStartOf="@+id/textView2"
                    app:layout_constraintTop_toBottomOf="@+id/textView2" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/updateDeleteForm"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="0dp"
            android:visibility="gone">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="72dp"
                    android:text="@string/change_fields"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/amka2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="192dp"
                    android:ems="10"
                    android:hint="AMKA"
                    android:inputType="textPersonName"
                    app:layout_constraintEnd_toEndOf="@+id/textView3"
                    app:layout_constraintHorizontal_bias="0.51"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/email2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="272dp"
                    android:ems="10"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    app:layout_constraintEnd_toEndOf="@+id/textView3"
                    app:layout_constraintHorizontal_bias="0.489"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/phone2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="352dp"
                    android:ems="10"
                    android:hint="@string/phone"
                    android:inputType="number"
                    app:layout_constraintEnd_toEndOf="@+id/textView3"
                    app:layout_constraintHorizontal_bias="0.489"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/update"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="320dp"
                    android:text="@string/change_button"
                    app:layout_constraintEnd_toEndOf="@+id/textView3"
                    app:layout_constraintHorizontal_bias="0.484"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <Button
                    android:id="@+id/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="380dp"
                    android:text="@string/cancel_button"
                    app:layout_constraintEnd_toEndOf="@+id/textView3"
                    app:layout_constraintHorizontal_bias="0.492"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />

                <Button
                    android:id="@+id/view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="440dp"
                    android:text="@string/view_button"
                    app:layout_constraintEnd_toEndOf="@+id/textView3"
                    app:layout_constraintHorizontal_bias="0.52"
                    app:layout_constraintStart_toStartOf="@+id/textView3"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" />
        </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>